--- a/style.css
+++ b/style.css
@@ -8,24 +8,26 @@
 	position: fixed;
 	cursor: pointer;
 	height: 100%;
-	width:15%;
+	width:200px;
 	left: 0px;
 	overflow: hidden;
 	font-size: 35px;
 	z-index: 25;
 }
 #section1{
-	width: 102%;
-	height:auto;
+	max-width: 100%;
+	height:0px;
+	padding-bottom: 66%;
 	margin: -10px -10px 0px -10px;
-	background-color: white;
-	opacity: .9;
+	top: 0;
+/*	background-color: white;
+	opacity: .9;*/
+	overflow: hidden;
 	z-index: -10;
-	background: url(amazing.jpg) no-repeat;
 }
 #section2{
 	width: 102%;
-	height:600px;
+	height:400px;
 	margin: -10px -10px -10px -10px;
 	background-color: #fff;
 	z-index: 10;
@@ -41,7 +43,7 @@
 	height: 100%;
 	width:0px;
 	background-color: #000;
-	opacity: .4;
+	opacity: .9;
 	overflow: hidden;
 	font-size: 35px;
 	cursor: pointer;
@@ -57,7 +59,7 @@
 	background-color: #fff;
 	border-radius: 3px 3px 3px 3px;
 	margin-left: 5px;
-	width: 40%;
+	width: 300px;
 }
 #close{
 	font-size: 80px;
@@ -82,9 +84,10 @@
 }
 /*inside section1*/
 video{
-	width: 102%;
+	width: 100%;
+	height: auto;
 	z-index: -100;
-	background: url(amazing.jpg) no-repeat;
+/*	background: url(amazing.jpg) no-repeat;*/
 	position: absolute;
 
 }
@@ -97,56 +100,64 @@ video{
 	padding-top: 20%;
 }
 .down{
-	font-size: 100px;
+	font-size: 80px;
 	font-weight: 600;
 	text-align: center;
 	width:100%;
-	margin-top: 300px;
+	margin-top: 200px;
+	/*padding-bottom: 10px;*/
 	z-index: 1;
 	color: #000;
+	position: absolute;
 }
 /*inside section2*/
 .left{
-	margin-top: 150px;
-	height: 300px;
+	margin-top: 100px;
+	height: 200px;
 	width:50%;
 	float: left;
 }
 #float-right{
-	height: 300px;
-	width:150px;
+	height: 200px;
+	width:100px;
 	float: right;	
 }
 #box1{
-	height: 150px;
-	width: 150px;
+	height: 100px;
+	width: 100px;
 	background: url(github.png);
 	background-size: cover;
 }
 #box2{
-	height: 150px;
-	width: 150px;
+	height: 100px;
+	width: 100px;
 	background: url(linkedin.png);
 	background-size: cover;
 }
 .right{
-	height: 300px;
+	height: 200px;
 	width:50%;
 	float: right;
-	margin-top: 150px;
+	margin-top: 100px;
 }
 #box3{
-	height: 150px;
-	width: 150px;
+	height: 100px;
+	width: 100px;
 	background: url(mail.png);
 	background-size: cover;
 }
 #box4{
-	height: 150px;
-	width: 150px;
+	height: 100px;
+	width: 100px;
 	background: url(twitter.png);
 	background-size: cover;
 }
-
+/*inside section3*/
+#nonsense{
+	margin: 0px 300px 100px 300px;
+	height: 600px;
+	width: 800px;
+	padding-top: 300px;
+}
 
 
